--- a/05-StatsAbuse-Biases-Confounders.Rmd
+++ b/05-StatsAbuse-Biases-Confounders.Rmd
@@ -5,7 +5,7 @@
 **Course Note:**
 :::
 
-This chapter is under construction. Content is hidden.
+This chapter is under construction. Some content is hidden.
 ::::
 
 ## Overview
