--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -1894,7 +1894,7 @@ A transitional period began in the late 1850s with the work of Louis Pasteur. Th
 
 \end{center}
 
-This chapter is under construction. Content is hidden.
+This chapter is under construction. Some content is hidden.
 
 \end{notebox}
 
