--- a/book.bib
+++ b/book.bib
@@ -272,6 +272,13 @@ edition = {1st},
   publisher={Routledge}
 }
 
+@book{bunge2012method,
+  title={Method, model and matter},
+  author={Bunge, Mario},
+  volume={44},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
 
 @book{loukides2018ethics,
   title={Ethics and data science},
