--- a/05-StatsAbuse-Biases-Confounders.Rmd
+++ b/05-StatsAbuse-Biases-Confounders.Rmd
@@ -8,7 +8,7 @@
 This chapter is under construction. Some content is hidden.
 ::::
 
-## Overview
+## Overview {#stats-overview}
 
 Daniel did not think of everything when designing his experiment. He did not take confounding bias into account. For instance, Daniel and his friends could have been healthier than the control group. Under such supposition, their strong appearance after ten days of a vegetarian diet may have nothing to do with the diet itself. Perhaps, they would have become even stronger if they had eaten the meat from the king. As we have seen in previous examples presented in this book, confounding bias happens when a variable influences both who is chosen for the treatment group as well as the experiment outcome. These variables might be known variables or act as a lurking third variable we are not aware of. Such variables are easy to spot in causal diagrams.
 
