added link to instrumental variables

--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -124,7 +124,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021: Last compiled: 2021-11-17}
+\date{2021: Last compiled: 2021-11-22}
 
 \begin{document}
 \maketitle
@@ -1620,7 +1620,7 @@ However, other predictions about the properties of the atom were wrong, and its 
 Philosopher Mary Hesse (1924-2016) argued that models act as analogies rather than descriptions of the targets. She distinguished between 3 kinds of analogies. In the first place, she considered that \textbf{positive analogies} hold between the aspects of a model and its target for which we have reasons to believe they are similar. An example of positive analogies can be found between mice and humans, which have similar hormone systems and physiology. On the other hand, the idealisations constitute \textbf{negative analogies}, such as the differences in size or lifespan between mice and humans. These negative analogies cover the properties in which model and target differ. Finally, \textbf{neutral analogies} concern the properties that we cannot investigate directly in the target, requiring the model for their study.
 
 \begin{quote}
-Without analogy there might be no knowledge: the perception of analo- gies is a first step towards classification and generalization. \citep{bunge2012method}
+Without analogy there might be no knowledge: the perception of analogies is a first step towards classification and generalization. \citep{bunge2012method}
 \end{quote}
 
 For instance, the reaction to a certain drug or treatment of interest. At the initial stage, is not possible to tell whether the model-target relationships concerning these properties constitute positive or negative analogies because we do not know yet how the relevant target properties are affected. Instead, such properties are investigated in the model, and researchers hypothesise that the model is analogous to the target in such properties. For instance, we assume that the effects of a drug in mice will give us knowledge about its effects in humans.
@@ -1866,7 +1866,7 @@ The observations of John Snow introduced a new variable into the causal diagram 
 \caption{Causal diagram after the introduction of an instrumental variable.}\label{fig:snow-dia-B}
 \end{figure}
 
-A variable that satisfies these properties is called an \textbf{instrumental variable}. See \citep{pokropek2016introduction} for examples of valid and invalid instrumental variables. \textbf{Since there are no confounders of the relation between Water Company and Cholera, any observed association must be causal}. Similarly, the association between Water Purity and Cholera is also causal.
+A variable that satisfies these properties is called an \textbf{instrumental variable}. See \citep{pokropek2016introduction} for examples of valid and invalid instrumental variables and \href{https://scpoecon.github.io/ScPoEconometrics/IV.html}{SciencesPo} for econometric examples. \textbf{Since there are no confounders of the relation between Water Company and Cholera, any observed association must be causal}. Similarly, the association between Water Purity and Cholera is also causal.
 
 \begin{quote}
 Specifically, an instrumental variable Z is an additional variable used to estimate the causal effect of variable X on Y. The traditional definition qualifies a variable Z as an instrumental (relative to the pair (X, Y)) if (i) Z is independent of all variables (including error terms) that have an influence on Y that is not mediated by X and (ii) Z is not independent of X. --- \citep{pearl2000causality}
